--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,310 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@600&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Advent Pro', sans-serif;
+    transition: .3s ease;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/*** color and default size**/
+
+:root{
+
+    --primaryColor: #00eaff;
+    --primaryHover: hsl(185, 92%, 41%);
+    --secondaryColor: rgb(150, 162, 188);
+    --paragraphColor: rgb(127, 127, 175);
+    --BgColor: #7a39e0 !important;;
+    --formColor:rgb(63, 8, 109); 
+    --projectCardColor: rgb(80, 10, 138); ;
+    --textColor: #dae4fb;
+    --headerHeight: 3rem;
+ 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/*** css setup**/
+
+
+html{
+  scroll-behavior: smooth;
+}
+
+a{
+    text-decoration: none;
+}
+
+li{
+    list-style: none;
+}
+
+.flex{
+    display: flex;
+    align-content: center;
+}
+
+.grid{
+    display: grid;
+    align-content: center;
+}
+
+input, textarea{
+    font-size: 100%;
+}
+
+.section{
+    padding: 4rem 0 2rem;
+}
+
+.container{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+img{
+    height: auto;
+    width: 100%;
+}
+
+.icon{
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.btn{
+    border: 2px solid var(--primaryHover);
+    padding: 0.5rem 1.5rem;
+    font-size: 1.1rem;
+    font-weight: 600;
+    position: relative;
+    color: var(--primaryColor);
+    background: transparent;
+}
+
+/** buttons hover effect***/
+
+.btn::before{
+    content: '';
+    height: 100%;
+    width: 0%;
+    background: var(--primaryColor);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: .2s;
+
+}
+
+.btn::after{
+    content: '';
+    height: 100%;
+    width: 0%;
+    background: var(--BgColor);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: .5s;
+    
+
+}
+
+.btn:hover::before, .btn:hover:after{
+    width: 100%;
+    
+}
+
+.navLink{
+    position: relative;
+}
+
+
+/** links hover effect**/
+.navLink::before{
+    content: '';
+    position: absolute;
+    background: var(--primaryHover);
+    height: 2px;
+    width: 0%;
+    bottom: -3px;
+    left: 0;
+    transition: 0.3s;
+}
+
+.navLink::after{
+    content: '';
+    position: absolute;
+    background: var(--projectCardColor);
+    height: 2px;
+    width: 0%;
+    bottom: -3px;
+    left: 0;
+    transition: 0.8s;
+}
+
+/** section title**/
+
+.sectionTitle{
+    padding: 1rem 0;
+    font-size: 2rem;
+    color: var(--textColor);
+    display: flex;
+    align-items: center;
+}
+
+.titleNumber{
+    color: var(--primaryColor);
+    margin: 0 0.6rem;
+    font-weight: 600;
+}
+
+.titleText{
+    position: relative;
+    width: max-content;
+}
+
+.underline{
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    top: 35px;
+    left: 0;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.underline span{
+    top: 0;
+    left: 10px;
+    width: 10px;
+    height: 100%;
+    border-radius: 10px;
+    position: absolute;
+    background: var(--textColor);
+    animation: moveLine 2s linear infinite;
+
+}
+
+@keyframes moveLine {
+    0%{
+        left: -20px;
+    }
+
+    100%{
+        left: 100px;
+    }
+}
+
+/**body styling**/
+
+body{
+    background: var(--BgColor);
+    color: white;
+}
+
+
+::selection{
+    background-color: var(--primaryColor);
+    color: white;
+}
+
+
+::-webkit-scrollbar-thumb{
+    background: var(--primaryHover);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar{
+    width: 10px;
+    background: var(--projectCardColor);
+
+}
+
+@media screen and (min-width: 769px){
+    .container{
+        width: 70%;
+        margin: auto;
+    }
+}
+
+@media screen and (min-width: 960px){
+    .section{
+     padding: 6rem 0 4rem;
+    }
+
+    .container{
+        width: 70%;
+        margin: auto;
+    }
+}
+
+
+@media screen and (min-width:1240px){
+    .section{
+     padding: 6rem 0 4rem;
+    }
+
+    .container{
+        width: 70%;
+        margin: auto;
+    }
+}
+
+@media screen and (min-width: 1440px){
+    body{
+
+     zoom: 1;
+
+    }
+}
+
+
+@media screen and (min-width: 2560px){
+    body{
+        
+     zoom: 1.7;
+
+    }
+}
+
+
+.ce-my-message-bubble {
+    background-color: #7a39e0 !important;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .ce-chat-title-text {
+    color: #7a39e0 !important;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .ce-chat-subtitle-text {
+    color: #7a39e0 !important;
+    font-weight: 600;
   }
-}
+  
+  #ce-send-message-button {
+    position: relative !important;
+    bottom: 2px !important;
+    left: 1px !important;
+    background-color: #7a39e0 !important;
+  }
+  
+  .ce-my-message-timestamp {
+    color: #7a39e0 !important;
+  }
+  
+  .transition-3 {
+    transition: all 0.33s ease;
+    -webkit-transition: all 0.33s ease;
+    -moz-transition: all 0.33s ease;
+  }
+  
+  .transition-5 {
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+  }
+  
+
+  
