--- a/src/Components/Home Section/home.scss
+++ b/src/Components/Home Section/home.scss
@@ -22,8 +22,8 @@
    
 
     .homeContainer{
-        padding: 4rem 1.5rem;
-
+        padding: 0rem 1.5rem;
+        padding-top: 2.3rem;
         .introText{
             font-size: 1.2rem;
             color: var(--primaryColor);
@@ -160,7 +160,7 @@
         .leftIcons{
             left: 5%;
             bottom: 0;
-            z-index: -1;
+            z-index: 1;
             .socials{
                 gap: 1rem;
               a{
@@ -175,7 +175,7 @@
         .rightEmail{
             right: 0;
             bottom: 0;
-            z-index: -1;
+            z-index: 1;
 
             .emailAddress{
                 transform: rotate(90deg) translate(-90px, 0px );
@@ -197,7 +197,7 @@
             }
 
             .title{
-                font-size: 3.5rem;
+                font-size: 3.2rem;
             }
 
 
